css/style.css
/* ... */
    .lownav a {
        text-decoration: none;
		font-size: 2rem;
		font-weight:600;
		padding:0px 8px;
    }
.lownav .buttlogo{
		max-width: 300px;
		min-width: 200px;
        overflow: hidden;
		display: block;
}

.buttLinks{
	margin-top:30px;
}
/* Social Links Social Links Social Links Social Links Social Links Social Links Social Links Social Links */
.social{
	margin-top:40px;
	min-width:220px;
}

.social a{
	padding: 5px 0px;
}
.social svg {
		fill: white;
		width: 50px;
	}

.social li {
		display: inline;
}
.social .socialpartA{
	display: inline-block;
}

.social .socialpartB{
	display: inline-block;
}

	.social .Facebook:hover {
		fill: #3B5998;
	}

	.social .LinkedIn:hover {
		fill: #0077B5;
	}

	.social .GitHub:hover {
		fill: #181717;
	}

	.social .Instagram:hover {
		fill: #E4405F;
	}

	.social .Twitter:hover {
		fill: #1DA1F2;
	}










/*

                                      
                88          88             88         
                88          ""             88         
                88                         88         
                88          88 8b,dPPYba,  88   ,d8   
                88          88 88P'   `"8a 88 ,a8"    
                88          88 88       88 8888[      
                88          88 88       88 88`"Yba,   
                88888888888 88 88       88 88   `Y8a  
                                      
                                      
                                                                           
                88                                          88 88                          
                88                                          88 ""                          
                88                                          88                             
                88          ,adPPYYba, 8b,dPPYba,   ,adPPYb,88 88 8b,dPPYba,   ,adPPYb,d8  
                88          ""     `Y8 88P'   `"8a a8"    `Y88 88 88P'   `"8a a8"    `Y88  
                88          ,adPPPPP88 88       88 8b       88 88 88       88 8b       88  
                88          88,    ,88 88       88 "8a,   ,d88 88 88       88 "8a,   ,d88  
                88888888888 `"8bbdP"Y8 88       88  `"8bbdP"Y8 88 88       88  `"YbbdP"Y8  
                                                                               aa,    ,88  
                                                                                "Y8bbdP"   
*/

.landinglogo {
    width: 250px;
    margin: -50px auto 20px auto;
    overflow: hidden;
}

    .landing h3 {
        line-height: 1.7em;
    }


    .landing .container {
        max-width: 600px;
        text-align: center;
    }

/*
                                                              
       db        88                                           
      d88b       88                                    ,d     
     d8'`8b      88                                    88     
    d8'  `8b     88,dPPYba,   ,adPPYba,  88       88 MM88MMM  
   d8YaaaaY8b    88P'    "8a a8"     "8a 88       88   88     
  d8""""""""8b   88       d8 8b       d8 88       88   88     
 d8'        `8b  88b,   ,a8" "8a,   ,a8" "8a,   ,a88   88,    
d8'          `8b 8Y"Ybbd8"'   `"YbbdP"'   `"YbbdP'Y8   "Y888  
*/

.about p{
    text-align: center;
}

.about h2 {
    color: #7F66E6;
}

.about h3 {
    font-size: 4.0rem;
    line-height: 2;
    font-weight: bold;
    text-transform: uppercase;
}

.insta{
    text-align: center;
}

.insta h5 {
    font-weight: bold;
    text-transform: uppercase;
    text-align:center;
}

.insta a{
    color:#6d50e1;
    text-decoration:none;
}
.insta a:hover{
    color:aquamarine;
}

#instafeed {
    display: inline-block;
}
    #instafeed img {
        margin: 0px 5px;
        padding: 9px;
        background-color: white;
        border: solid #a9c7c7 1px;
    }

.heartspace{
    text-align:center;
}
/*Animated Heart!!! 
*/
.heart {
    width:90px;
    height: 90px;
    display:inline-block;
    background: url(../assets/heart.png);
    background-position: 0 0;
    cursor: pointer;
    animation: fave-heart 1s steps(28);
}

    .heart:hover {
        background-position: -2800px 0;
        transition: background 1s steps(28);
    }

@keyframes fave-heart {
    0% {
        background-position: 0 0;
    }

    100% {
        background-position: -2800px 0;
    }
}

